k8s/svc-gatway.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    networking.istio.io/service-type: NodePort
  labels:
    gateway.istio.io/managed: istio.io-gateway-controller
    gateway.networking.k8s.io/gateway-name: gateway
    istio.io/gateway-name: gateway
  name: gateway-istio
  namespace: istio-system
spec:
  selector:
    gateway.networking.k8s.io/gateway-name: gateway
  type: NodePort
  ports:
    - appProtocol: tcp
      name: status-port
      nodePort: 32751
      port: 15021
      protocol: TCP
      targetPort: 15021
    - appProtocol: http
      name: http
      nodePort: 30080
      port: 80
      protocol: TCP
      targetPort: 80
    - appProtocol: https
      name: https
      nodePort: 30443
      port: 443
      protocol: TCP
      targetPort: 443
